--- a/style.css
+++ b/style.css
@@ -2,16 +2,16 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
 }
 
-body{
+body {
     height: 100vh;
-    width:100vw;
+    width: 100vw;
 }
 
-.time{
+.time {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -19,64 +19,27 @@ body{
     font-size: 9vw;
 }
 
-#hrs12{
+#hrs12 {
     display: none;
 }
 
-
-
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-/* The slider */
-.slider {
+.button {
     position: absolute;
-    cursor: pointer;
+    color: white;
+    background-color: black;
+    border-radius: 3vw;
+    padding: .5vw;
+    font-size: 1vw;
+}
+
+.formate {
+    position: absolute;
+    color: white;
+    background-color: black;
+    border-radius: 3vw;
+    padding: .5vw;
+    font-size: 1vw;
     top: 0;
-    left: 0;
     right: 0;
-    bottom: 0;
-    background-color: black;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border-radius: 34px;
 }
 
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    border-radius: 50%;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-input:checked + .slider {
-    background-color: black;
-}
-
-input:focus + .slider {
-    box-shadow: 0 0 1px white;
-}
-
-input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}
